# aws-copier

./: .env.example  .gitignore  Dockerfile  README.md  docker-run.sh  pyproject.toml
src/: aws_copier.py
