[tool.poetry]
name = "aws-copier"
version = "0.1.0"
description = "AWS S3 bucket migration tool"
authors = ["Pranav Prakash"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.37.27"
botocore = "^1.37.27"

dotenv = "^0.9.9"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aws-copier = "src.aws_copier:main"

[virtualenvs]
create = true
in-project = true
